# asrclient

./: .gitignore  README.md  README_cn.md  README_en.md  README_ko.md  build.bat  licenses_by_license.json  licenses_flat.json  mypy.ini  pyproject.toml  w_okada's_ASR_Client.ipynb
asrclient/: app_status.py  const.py  exception.py  logger.py  main.py
asrclient/server/: event_emitter_manager.py  key_generator.py  rest_api.py  rest_api_configuration_manager.py  rest_api_gpu_device_manager.py  rest_api_hello.py  rest_api_transcriber.py  server.py  socketio.py  socketio_namespace.py  socketio_server.py  validation_error_logging_route.py
asrclient/transcriber/: transcrber.py
asrclient/transcriber/asr_manager/device_manager/: device_manager.py
asrclient/transcriber/asr_manager/pipeline/: general_whisper_pipeline.py  pipeline.py  pipline_manager.py  single_transcriber_pipeline.py
asrclient/transcriber/asr_manager/recognizer/: faster_whisper_recognizer.py  (+8 more)
asrclient/transcriber/configuration_manager/: configuration_manager.py
asrclient/transcriber/data_types/: data_types.py
asrclient/transcriber/gpu_device_manager/: gpu_device_manager.py
client/python_socket_io/: main.py
client/typescript/: package-lock.json  package.json  webpack.worklet.dev.cjs  webpack.worklet.prod.cjs
client/typescript-demo/: build-voice-changer-js.bat  package-lock.json  package.json  webpack.dev.cjs
client/typescript-demo/public/: index.html  licenses-js.json
client/typescript-demo/src/: const.ts  index.tsx
client/typescript/src/: RestClient.ts  VoiceChangerClient.ts  const.ts  index.ts
client/webhook_server/: generic_main.js  generic_main.py  main.py
scripts/: version_manager.py
web_front/: index.html  index.js  index.js.LICENSE.txt  licenses-js.json
(+48 files in other folders)
